minor tweaks
1. validate the db connection *before* loading all the resources
2. update omop.jdbc.properties to make it more clear how to set a db
password
3. use List.of instead of Arrays.asList (just because)

Signed-off-by: Lee Surprenant <lmsurpre@us.ibm.com>