@@ -6,7 +6,6 @@
 
 package com.ibm.fhir.omop.mapping;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.ibm.fhir.model.resource.AdverseEvent;
@@ -30,19 +29,19 @@ import com.ibm.fhir.omop.table.Table;
  * and the <a href="https://www.ohdsi.org/web/wiki/doku.php?id=projects:workgroups:mappings_between_ohdsi_cdm_and_fhir">OHSDI FHIR Workgroup wiki page</a>
  */
 public enum Mapping {
-    PATIENT_TO_PERSON_AND_LOCATION(Arrays.asList(Patient.class), Arrays.asList(Table.PERSON, Table.LOCATION)),
-    ENCOUNTER_TO_VISIT_OCCURRENCE(Arrays.asList(Encounter.class), Arrays.asList(Table.VISIT_OCCURRENCE)),
-    LOCATION_TO_CARE_SITE(Arrays.asList(Location.class), Arrays.asList(Table.CARE_SITE)),
-    CONDITION_TO_CONDITION_OCCURRENCE(Arrays.asList(Condition.class), Arrays.asList(Table.CONDITION_OCCURRENCE)),
-    ADVERSE_EVENT_TO_DEATH(Arrays.asList(AdverseEvent.class), Arrays.asList(Table.DEATH)),
-    PROCEDURE_TO_DEVICE_EXPOSURE(Arrays.asList(Procedure.class), Arrays.asList(Table.DEVICE_EXPOSURE)),
-    MEDICATION_STATEMENT_AND_MEDICATION_REQUEST_AND_MEDICATION_TO_DRUG_EXPOSURE(Arrays.asList(MedicationStatement.class, MedicationRequest.class, Medication.class), Arrays.asList(Table.DRUG_EXPOSURE)),
-    LOCATION_TO_LOCATION(Arrays.asList(Location.class), Arrays.asList(Table.LOCATION)),
-    OBSERVATION_TO_OBSERVATION(Arrays.asList(Observation.class), Arrays.asList(Table.OBSERVATION)),
-    PROCEDURE_TO_PROCEDURE_OCCURRENCE(Arrays.asList(Procedure.class), Arrays.asList(Table.PROCEDURE_OCCURRENCE)),
-    PRACTITIONER_TO_PROVIDER(Arrays.asList(Practitioner.class), Arrays.asList(Table.PROVIDER)),
-    SPECIMEN_TO_SPECIMEN(Arrays.asList(Specimen.class), Arrays.asList(Table.SPECIMEN)),
-    ORGANIZATION_TO_CARE_SITE_AND_LOCATION(Arrays.asList(Organization.class), Arrays.asList(Table.CARE_SITE, Table.LOCATION));
+    PATIENT_TO_PERSON_AND_LOCATION(List.of(Patient.class), List.of(Table.PERSON, Table.LOCATION)),
+    ENCOUNTER_TO_VISIT_OCCURRENCE(List.of(Encounter.class), List.of(Table.VISIT_OCCURRENCE)),
+    LOCATION_TO_CARE_SITE(List.of(Location.class), List.of(Table.CARE_SITE)),
+    CONDITION_TO_CONDITION_OCCURRENCE(List.of(Condition.class), List.of(Table.CONDITION_OCCURRENCE)),
+    ADVERSE_EVENT_TO_DEATH(List.of(AdverseEvent.class), List.of(Table.DEATH)),
+    PROCEDURE_TO_DEVICE_EXPOSURE(List.of(Procedure.class), List.of(Table.DEVICE_EXPOSURE)),
+    MEDICATION_STATEMENT_AND_MEDICATION_REQUEST_AND_MEDICATION_TO_DRUG_EXPOSURE(List.of(MedicationStatement.class, MedicationRequest.class, Medication.class), List.of(Table.DRUG_EXPOSURE)),
+    LOCATION_TO_LOCATION(List.of(Location.class), List.of(Table.LOCATION)),
+    OBSERVATION_TO_OBSERVATION(List.of(Observation.class), List.of(Table.OBSERVATION)),
+    PROCEDURE_TO_PROCEDURE_OCCURRENCE(List.of(Procedure.class), List.of(Table.PROCEDURE_OCCURRENCE)),
+    PRACTITIONER_TO_PROVIDER(List.of(Practitioner.class), List.of(Table.PROVIDER)),
+    SPECIMEN_TO_SPECIMEN(List.of(Specimen.class), List.of(Table.SPECIMEN)),
+    ORGANIZATION_TO_CARE_SITE_AND_LOCATION(List.of(Organization.class), List.of(Table.CARE_SITE, Table.LOCATION));
 
     private final List<Class<? extends Resource>> resourceTypes;
     private final List<Table> tables;
